Fix assert if an end tag has "attributes".  Bug 143512, patch by Chris Thomas <cst@andrew.cmu.edu>, r+sr=bzbarsky