parser/htmlparser/src/CNavDTD.h
@@ -363,8 +363,8 @@ public:
 
 protected:
 
-		nsresult        CollectAttributes(nsIParserNode& aNode,eHTMLTags aTag,PRInt32 aCount);
-		nsresult        CollectSkippedContent(nsIParserNode& aNode,PRInt32& aCount);
+    nsresult        CollectAttributes(nsIParserNode* aNode,eHTMLTags aTag,PRInt32 aCount,PRBool aDiscardAttributes);
+    nsresult        CollectSkippedContent(nsIParserNode& aNode,PRInt32& aCount);
     nsresult        WillHandleStartTag(CToken* aToken,eHTMLTags aChildTag,nsIParserNode& aNode);
     nsresult        DidHandleStartTag(nsIParserNode& aNode,eHTMLTags aChildTag);
     nsresult        HandleOmittedTag(CToken* aToken,eHTMLTags aChildTag,eHTMLTags aParent,nsIParserNode *aNode);
